# growearth

./: .env  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  requirements.txt.backup  vercel.json
docs/: 00_Grow Earth - Online Plant Store Platform Overview.md  02_Basic User Authentication.md  03_Code work.md  04_models.md  05_chat_with_ai.md  05_code_help.md  06_run_project.md  Grow Earth - Online Plant Store Platform Overview.md  Makefile.md  Online Plant Store Project Working.free  User Authentication Setup.md  chatgpt one time response for home page.md  data_model.md  development.md  download images.md  get image links for home page.md  info_plants importance.md  models.md  plants importance.md
scripts/: build_files.sh
src/: db.sqlite3  manage.py  package-lock.json  package.json  tailwind.config.js
src/apps/_services/: email_verify.py  logging_config.py  two_factor.py  verify_email.py
src/apps/_utils/: database_management.py  message.py
src/apps/account/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/accounts/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
src/apps/core/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
src/apps/store/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
src/apps/tags/: models.py
src/project/: asgi.py  context_processors.py  urls.py  wsgi.py
src/project/settings/: base.py  development.py  logs.py  production.py  testing.py
src/static/css/: tailwind.css
src/static/images/: rename_images.py  (+1 more)
src/templates/: 404.html  layout.html
(+61 files in other folders)
