[project]
name = "grow-earth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.5",
    "django-browser-reload>=1.17.0",
    "django-debug-toolbar>=5.0.1",
    "django-extensions>=3.2.3",
    "django-otp>=1.5.4",
    "django-tailwind>=3.8.0",
    "django-tailwind-cli>=2.21.1",
    "django-two-factor-auth>=1.17.0",
    "djlint>=1.36.4",
    "fontawesomefree>=6.6.0",
    "phonenumbers>=8.13.54",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "six>=1.17.0",
]
